crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergy-crawler
  labels:
    app: synergy-crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synergy-crawler
  template:
    spec:
      containers:
      - name: synergy-crawler
        image: bootdotdev/synergy-crawler:latest
    metadata:
      labels:
        app: synergy-crawler
