testcpu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: synergychat-testcpu
  name: synergychat-testcpu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synergychat-testcpu
  template:
    metadata:
      labels:
        app: synergychat-testcpu
    spec:
      containers:
      - image: bootdotdev/synergychat-testcpu:latest
        name: synergychat-testcpu
        resources:
          limits:
            cpu: 50m
