api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"web-service","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":8080}],"selector":{"app":"synergychat-web"}}}
  creationTimestamp: "2026-05-25T15:56:30Z"
  name: api-service
  namespace: default
  resourceVersion: "26703"
  uid: ab6b3fda-0d62-4dc2-a94a-2da0b23e9dc4
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 30080
  selector:
    app: synergychat-api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
