crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
  namespace: crawler
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: synergy-crawler
