web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  clusterIP: 10.105.114.191
  clusterIPs:
  - 10.105.114.191
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: synergychat-web
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
