api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1 
kind: HTTPRoute
metadata:
  name: api-httproute
spec:
  parentRefs:
  - name: app-gateway 
  hostnames:
  - "synchatapi.internal"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: api-service
      port: 80
